<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_portfolio_title">My Nanodegree Apps!</string>
    <string name="app_portfolio_button_text_spotify_streamer">Spotify Streamer</string>
    <string name="app_portfolio_button_text_scores_app">Scores App</string>
    <string name="app_portfolio_button_text_library_app">Library App</string>
    <string name="app_portfolio_button_text_build_it_bigger">Build It Bigger</string>
    <string name="app_portfolio_button_text_xyz_reader">XYZ Reader</string>
    <string name="app_portfolio_button_text_capstone_my_own_app">Capstone: My Own App</string>
</resources>
